
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.


MOD 0.9.5 beta 5 (rev 1811 - October 26, 2006)
====================================
* [FS#610] Manager username length increased from 15 to 100 characters (1811)
* [FS#612] Missing word in english language define (1810)
* Fix captcha failure on manager login (bad image path) (1806)
* [FS#597] Fix Preview area size (1805)
* Update Configuration Page titles and order (1805)
* Fix Configuration Tab on Welcome Page not disappearing (1805)
* Update installer layout (1803)
* Update Wayfinder to 1.0 (1785)
* Fix numerous XHTML warnings for site configuration page and language tweaks (1783)
* Updated File Browser resources to relative paths by default (1780)
* Updated Demo Content Categories (1776)
* Removed PoweredBy from installer. (1775)
* Added new configuration option to enable/disable the TinyMCE GZip Compressor script. (1772)
* Fix top navigation menu in Opera. Tested in Opera/mac, Opera/win, FF/mac, FF/win, Netscape/win, Safari and IE6. (1764,1765,1766,1767)
* Fixed typo that prevented OnLogHit event from being triggered. (1763)
* Fixed regexp in mergeSettingsContent that was hungry for some javascript expressions. (1762)
* [FS#543] Fix for second part of this bug report. Prevents JS error being generated for missing setActiveStyleSheet() function when using MODxHost template.
* [FS#581] and [FS#567] Make the resource browser respect the 'Rewrite Image Paths' setting. (will also handle other filetypes inserted by the resource browser). (1760)
* [FS#581] and [FS#567] Remove the image rewrite code from save_content.processor.php - does not work atm and doesn't take into account TV values. (1760)
* [FS#579] Stop current date being used if no value is set for a TV when using date formatter widget. (1759)